tests/ui/const-generics/struct-with-invalid-const-param.stderr
error[E0573]: cannot find type `C` in this scope
  --> $DIR/struct-with-invalid-const-param.rs:3:23
   |
LL | struct S<const C: u8>(C);
   |                       ^ not found in this scope
   |
   = note: a const parameter named `C` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0573`.
